added full database support and scheduler helper for sms messages

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
+    <style>
+      body {background-color:#D1D1D1; margin: 0; padding: 0;}
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
